add postslist template change, add index template change, add style change

--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -4,9 +4,12 @@
     <a href="{{ post.url | url }}" class="postlist-link">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
     <time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate }}</time>
     {% for tag in post.data.tags | filterTagList %}
+      {%- if collections.tagList.indexOf(tag) != -1 -%}
       {% set tagUrl %}/tags/{{ tag | slug }}/{% endset %}
       <a href="{{ tagUrl | url }}" class="post-tag">{{ tag }}</a>
+      {%- endif -%}
     {% endfor %}
   </li>
+    {{ post.data.description }}<br/></br>
 {% endfor %}
 </ol>
