--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,13 @@
   box-sizing: border-box;
 }
 
+@media screen and (min-width: 768px) {
+  body {
+    max-width: 768px;
+    margin: 0 auto;
+  }
+}
+
 html,
 body {
   padding: 0;
