--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -9,7 +9,7 @@
       <a href="{{ tagUrl | url }}" class="post-tag">{{ tag }}</a>
       {%- endif -%}
     {% endfor %}
-    {# {{ post | emojiReadTime }} #}
+    {{ post | readingTime }}
   </li>
     {{ post.data.description }}<br/></br>
 {% endfor %}
